--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 
     <link rel="stylesheet" href="assets/style/style.css">
     <style>
+        .opa{
+            width: 100%;
+            height: 500px;
+            background: orange;
+        }
         .mfiddle-Owner-categories {
             list-style: none;
             padding: 0;
@@ -93,7 +98,7 @@
     <div data-montage-id="owner">
         <span class="loading"></span>
     </div>
-    <div data-montage-id="component">
+    <div class="opa" data-montage-id="component">
         <ul data-montage-id="categories" class="mfiddle-Owner-categories">
             <li data-montage-id="category" class="mfiddle-Owner-category"></li>
         </ul>
