--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
             }
         }
     }
-
+    </script>
+    <script>
         var Component = require("montage/ui/component").Component;
 
         exports.Owner = Component.specialize({
@@ -90,7 +91,7 @@
                 }
             }
         });
-
+console.log(">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>")
         </script>
 </head>
 <body>
