--- a/index.html
+++ b/index.html
@@ -58,7 +58,15 @@
             "prototype": "montage/ui/repetition.reel",
             "properties": {
                 "element": {"#": "categories"},
-                "isSelectionEnabled": true
+                "isSelectionEnabled": true,
+                "content": [
+                    {"category": "Turtles"},
+                    {"category": "Cats"},
+                    {"category": "Dogs"},
+                    {"category": "Horses"},
+                    {"category": "Squirrels"},
+                    {"category": "Birds"}
+                    ]
             }
         },
         "category": {
