--- a/index.html
+++ b/index.html
@@ -19,96 +19,17 @@
     <link rel="shortcut icon" sizes="128x128" href="assets/images/icons/icon-128x128.png">
 
     <link rel="stylesheet" href="assets/style/style.css">
-    <style>
-        .opa{
-            width: 100%;
-            height: 500px;
-            background: orange;
-        }
-        .mfiddle-Owner-categories {
-            list-style: none;
-            padding: 0;
-        }
 
-        .mfiddle-Owner-category {
-            list-style: none;
-            line-height: 2;
-            border-bottom: 1px solid black;
-        }
-
-        .mfiddle-Owner-category.active {
-            color: blue;
-        }
-
-        .mfiddle-Owner-category.selected {
-            color: blue;
-            font-weight: bold;
-        }
-    </style>
     <script src="node_modules/montage/montage.js"></script>
     <script type="text/montage-serialization">
     {
         "owner": {
-            "prototype":"montage/ui/loader.reel",
-            "properties": {
-                "element": {"#": "owner"}
-            }
-        },
-        "categories": {
-            "prototype": "montage/ui/repetition.reel",
-            "properties": {
-                "element": {"#": "categories"},
-                "isSelectionEnabled": true,
-                "content": [
-                    {"category": "Turtles"},
-                    {"category": "Cats"},
-                    {"category": "Dogs"},
-                    {"category": "Horses"},
-                    {"category": "Squirrels"},
-                    {"category": "Birds"}
-                    ]
-            }
-        },
-        "category": {
-            "prototype": "montage/ui/text.reel",
-            "properties": {
-                "element": {"#": "category"}
-            },
-            "bindings": {
-                "value": {"<-": "@categories:iteration.object.category"}
-            }
+            "prototype": "montage/ui/loader.reel"
         }
     }
     </script>
 </head>
 <body>
-    <div data-montage-id="owner">
-        <span class="loading"></span>
-    </div>
-    <div class="opa" data-montage-id="component">
-        <ul data-montage-id="categories" class="mfiddle-Owner-categories">
-            <li data-montage-id="category" class="mfiddle-Owner-category"></li>
-        </ul>
-    </div>
-        <script>
-            var Component = require("montage/ui/component").Component;
-
-            exports.Owner = Component.specialize({
-                templateDidLoad: {
-                    value: function() {
-                        var categories = this.templateObjects.categories;
-                        console.log(">>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>");
-                        categories.content = [
-                            {"category": "Turtles"},
-                            {"category": "Cats"},
-                            {"category": "Dogs"},
-                            {"category": "Horses"},
-                            {"category": "Squirrels"},
-                            {"category": "Birds"}
-                        ];
-                    }
-                }
-            });
-    </script>
+    <span class="loading"></span>
 </body>
 </html>
