--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -19,7 +19,14 @@
                 "element": {"#": "button"},
                 "enabled": true,
                 "label": "Button"
-            }
+            },
+            "listeners": [
+                {
+                    "type": "action",
+                    "useCapture": false,
+                    "listener": {"@": "owner"}
+                }
+            ]
         },
         "repetition": {
             "prototype": "montage/ui/repetition.reel",
@@ -49,7 +56,8 @@
     <div data-montage-id="main" data-montage-skin="light" class="Main">
         <button data-montage-id="button"></button>
         <ul data-montage-id="repetition">
-          HELLO => <p data-montage-id="text"></p>
+            HELLO =>
+            <p data-montage-id="text"></p>
         </ul>
     </div>
 </body>
