--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -13,6 +13,13 @@
                 "element": {"#": "main"}
             }
         },
+        "badge": {
+            "prototype": "digit/ui/badge.reel",
+            "properties": {
+                "element": {"#": "badge"},
+                "value": "7"
+            }
+        },
         "button": {
             "prototype": "digit/ui/button.reel",
             "properties": {
@@ -27,6 +34,16 @@
                     "listener": {"@": "owner"}
                 }
             ]
+        },
+        "list": {
+            "prototype": "digit/ui/list.reel",
+            "properties": {
+                "element": {"#": "list"},
+                "contentController": null
+            },
+            "bindings": {
+                "content": {"<-": "@repetition.content"}
+            }
         },
         "repetition": {
             "prototype": "montage/ui/repetition.reel",
@@ -48,6 +65,16 @@
             "bindings": {
                 "value": {"<-": "@repetition:iteration.object"}
             }
+        },
+        "textField": {
+            "prototype": "digit/ui/text-field.reel",
+            "properties": {
+                "element": {"#": "textField"},
+                "placeholderValue": "Text"
+            },
+            "bindings": {
+                "value": {"<-": "@repetition:iteration.object"}
+            }
         }
     }
     </script>
@@ -58,6 +85,12 @@
         <ul data-montage-id="repetition">
             HELLO =>
             <p data-montage-id="text"></p>
+        </ul>
+        <ul data-montage-id="list">
+            <li data-montage-id="listItem">
+                <input data-montage-id="textField" type="text">
+                <output data-montage-id="badge"></output>
+            </li>
         </ul>
     </div>
 </body>
