--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <link rel="shortcut icon" href="assets/images/icons/apple-touch-icon.png">
     <link rel="shortcut icon" sizes="1024x1024" href="assets/images/icons/icon-1024x1024.png">
     <link rel="shortcut icon" sizes="128x128" href="assets/images/icons/icon-128x128.png">
-
-    <link rel="stylesheet" href="assets/style/style.css">
+    
+    <link rel="stylesheet" href="assets/style//metro-bootstrap.min.css">
+    <script src="http://metroui.org.ua/js/jquery/jquery.min.js"></script>
+    <script src="http://metroui.org.ua/js/jquery/jquery.widget.min.js"></script>
+    <script src="assets/js/metro/metro.min.js"></script>
+    
 
     <script src="node_modules/montage/montage.js"></script>
     <script type="text/montage-serialization">
@@ -29,7 +33,7 @@
     }
     </script>
 </head>
-<body>
+<body class="metro">
     <span class="loading"></span>
 </body>
 </html>
