--- a/index.html
+++ b/index.html
@@ -34,6 +34,43 @@
     </script>
 </head>
 <body class="metro">
+        <div class="container">
+            <header class="margin20 nrm nlm">
+                <div class="clearfix">
+                    <div class="place-right">
+                        <form>
+                            <div class="input-control text size6 margin20 nrm">
+                                <input type="text" name="q" placeholder="Search...">
+                                <button class="btn-search"></button>
+                            </div>
+                        </form>
+                    </div>
+                    <a class="place-left" href="#" title="">
+                        <h1>News Portal</h1>
+                    </a>
+                </div>
+
+                <div class="main-menu-wrapper">
+                    <ul class="horizontal-menu nlm">
+                        <li><a href="#">news</a></li>
+                        <li><a href="#">sports</a></li>
+                        <li><a href="#">entertainment</a></li>
+                        <li><a href="#">money</a></li>
+                        <li><a href="#">autos</a></li>
+                        <li><a href="#">living</a></li>
+                        <li><a href="#">health</a></li>
+                        <li class="place-right">
+                            <a href="#" class="dropdown-toggle">options</a>
+                            <ul class="dropdown-menu place-right" data-show="hover">
+                                <li><a href="#">Go to Classic MSN</a></li>
+                                <li><a href="#">MSN Worldwide</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </header>
+        </div>
+            
     <span class="loading"></span>
 </body>
 </html>
