--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </script>
 </head>
 <body class="metro">
-        <div class="container bg-darkViolet">
+        <div class="container bg-darkViolet fg-white">
             <header class="margin20 nrm nlm">
                 <div class="clearfix">
                     <div class="place-right">
