--- a/index.html
+++ b/index.html
@@ -28,52 +28,13 @@
     <script type="text/montage-serialization">
     {
         "owner": {
-            "prototype": "montage/ui/loader.reel",
-            "properties": {
-                "element": {"#": "main"}
+            "prototype": "montage/ui/loader.reel"
             }
         }
     }
     </script>
 </head>
 <body class="metro">
-        <div class="container bg-darkViolet fg-white">
-            <header class="margin20 nrm nlm">
-                <div class="clearfix">
-                    <div class="place-right">
-                        <form>
-                            <div class="input-control text size6 margin20 nrm">
-                                <input type="text" name="q" placeholder="Search...">
-                                <button class="btn-search"></button>
-                            </div>
-                        </form>
-                    </div>
-                    <a class="place-left" href="#" title="">
-                        <h1>News Portal</h1>
-                    </a>
-                </div>
 
-                <div class="main-menu-wrapper">
-                    <ul class="horizontal-menu nlm">
-                        <li><a href="#">news</a></li>
-                        <li><a href="#">sports</a></li>
-                        <li><a href="#">entertainment</a></li>
-                        <li><a href="#">money</a></li>
-                        <li><a href="#">autos</a></li>
-                        <li><a href="#">living</a></li>
-                        <li><a href="#">health</a></li>
-                        <li class="place-right">
-                            <a href="#" class="dropdown-toggle">options</a>
-                            <ul class="dropdown-menu place-right" data-show="hover">
-                                <li><a href="#">Go to Classic MSN</a></li>
-                                <li><a href="#">MSN Worldwide</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </header>
-        </div>
-            
-    <div data-montage-id="main" data-montage-skin="light" class="Main"> </div>
 </body>
 </html>
