--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
     <link rel="shortcut icon" href="assets/images/icons/apple-touch-icon.png">
     <link rel="shortcut icon" sizes="1024x1024" href="assets/images/icons/icon-1024x1024.png">
     <link rel="shortcut icon" sizes="128x128" href="assets/images/icons/icon-128x128.png">
-    
-    <link rel="stylesheet" href="assets/style//metro-bootstrap.min.css">
-    <script src="http://metroui.org.ua/js/jquery/jquery.min.js"></script>
-    <script src="http://metroui.org.ua/js/jquery/jquery.widget.min.js"></script>
-    <script src="assets/js/metro/metro.min.js"></script>
+   
     
 
     <script src="node_modules/montage/montage.js"></script>
     <script type="text/montage-serialization">
     {
         "owner": {
-            "prototype": "montage/ui/loader.reel"
+            "prototype": "montage/ui/loader.reel",
+                        "properties": {
+                "element": {"#": "main"}
+            }
         }
     }
     </script>
