--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         "owner": {
             "prototype": "montage/ui/loader.reel",
                         "properties": {
-                "element": {"#": "main"}
+                "element": {"#": "xxx"}
             }
         }
     }
     </script>
 </head>
-<body>
+<body data-montage-id="xxx">
     <span>nnnnnnnnnnnnnnnnnnnnnnn</span>
 </body>
 </html>
