--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     </script>
 </head>
 <body data-montage-id="xxx">
-    <span>nnnnnnnnnnnnnnnnnnnnnnn</span>
+    <span>XXXXXXXXXXXX</span>
 </body>
 </html>
