--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     }
     </script>
 </head>
-<body data-montage-id="xxx">
+    <body>
+<div data-montage-id="xxx">
     <span>XXXXXXXXXXXX</span>
+        </div>
+        AAAAAAAAAAAAAAAAAAAAAAAAA
 </body>
 </html>
